--- a/package.json
+++ b/package.json
@@ -21,6 +21,16 @@
   },
   "homepage": "https://github.com/sfilmak/MAS-project#readme",
   "devDependencies": {
-    "webpack": "^4.43.0"
+    "react": "^16.13.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "react-dom": "^16.13.1",
+    "rest": "^2.0.0"
   }
 }
