--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
+#TODO: return persistence before sending
+# spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=
@@ -8,4 +10,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
-spring.data.rest.base-path=/api
+#spring.data.rest.base-path=/api
