--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.3.0",
     "react-dom": "^16.13.1",
