--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "babel-loader": "^8.1.0",
+    "dayjs": "^1.8.28",
     "html-webpack-plugin": "^4.3.0",
+    "react-dayjs": "^0.1.6",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "rest": "^2.0.0",
