--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-react": "^7.10.1",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "dayjs": "^1.8.28",
     "html-webpack-plugin": "^4.3.0",
