--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db-mas
+spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db-mas-2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=
